--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Duru+Sans&display=swap');
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Duru Sans', sans-serif;
 }
 
 a {
@@ -14,3 +14,14 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.home-page{
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #00B1AA;
+  background-image: url("../public/home/background.png");
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
